environments/common/observability/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: observability
spec:
  hosts:
    - "kiali.${HOST}"
  gateways:
    - istio-ingress/public-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
